// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`deleteFile deletes file given key and password hash 1`] = `
Request {
  "agent": undefined,
  "compress": true,
  "counter": 0,
  "follow": 20,
  "size": 0,
  "timeout": 0,
  Symbol(Body internals): {
    "body": null,
    "disturbed": false,
    "error": null,
  },
  Symbol(Request internals): {
    "headers": Headers {
      Symbol(map): {
        "X-Password-Sha512": [
          "cc7222b9eb5b430fc446942a1a7b85f9593328f9c42f3a343a9c698e5574fdc3d9b435f94dbc667f82786b1747bbb27abe76bfddc473fbc2145b8d2e3265114e",
        ],
        "accept": [
          "application/json",
        ],
      },
    },
    "method": "DELETE",
    "parsedURL": Url {
      "auth": null,
      "hash": null,
      "host": "localhost",
      "hostname": "localhost",
      "href": "http://localhost/api/files/fileKey",
      "path": "/api/files/fileKey",
      "pathname": "/api/files/fileKey",
      "port": null,
      "protocol": "http:",
      "query": null,
      "search": null,
      "slashes": true,
    },
    "redirect": "follow",
    "signal": AbortSignal {},
  },
}
`;

exports[`downloadFile success downloads file given key 1`] = `
Request {
  "agent": undefined,
  "compress": true,
  "counter": 0,
  "follow": 20,
  "size": 0,
  "timeout": 0,
  Symbol(Body internals): {
    "body": null,
    "disturbed": false,
    "error": null,
  },
  Symbol(Request internals): {
    "headers": Headers {
      Symbol(map): {
        "X-Password-Sha512": [
          "passwordSHA512",
        ],
      },
    },
    "method": "GET",
    "parsedURL": Url {
      "auth": null,
      "hash": null,
      "host": "localhost",
      "hostname": "localhost",
      "href": "http://localhost/api/files/fileKey",
      "path": "/api/files/fileKey",
      "pathname": "/api/files/fileKey",
      "port": null,
      "protocol": "http:",
      "query": null,
      "search": null,
      "slashes": true,
    },
    "redirect": "follow",
    "signal": AbortSignal {},
  },
}
`;

exports[`uploadFile uploads files 1`] = `
Request {
  "agent": undefined,
  "compress": true,
  "counter": 0,
  "follow": 20,
  "size": 0,
  "timeout": 0,
  Symbol(Body internals): {
    "body": {
      "data": [
        91,
        111,
        98,
        106,
        101,
        99,
        116,
        32,
        70,
        111,
        114,
        109,
        68,
        97,
        116,
        97,
        93,
      ],
      "type": "Buffer",
    },
    "disturbed": false,
    "error": null,
  },
  Symbol(Request internals): {
    "headers": Headers {
      Symbol(map): {
        "Content-Type": [
          "text/plain;charset=UTF-8",
        ],
      },
    },
    "method": "POST",
    "parsedURL": Url {
      "auth": null,
      "hash": null,
      "host": "localhost",
      "hostname": "localhost",
      "href": "http://localhost/api/files",
      "path": "/api/files",
      "pathname": "/api/files",
      "port": null,
      "protocol": "http:",
      "query": null,
      "search": null,
      "slashes": true,
    },
    "redirect": "follow",
    "signal": AbortSignal {},
  },
}
`;
